--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>cool site</title>
+    </head>
+    <body>
+        <h1>Cool site</h1>
+        <hr>
+    </body>
+</html>
