--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>cool site</title>
+        <title>cool site</title> <!--Saranrath center this-->>
     </head>
     <body>
         <h1>Cool site</h1>
