--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>cool site</title> 
     </head>
     <body>
-        <center><h1>Cool site</h1></center>
+        <big><center><h1>Cool site</h1></center></big>
         <hr>
     </body>
 </html>
