commit for website isue

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <big><center><h1>Cool site</h1></center></big>
         <hr>
+        <p>cool minecraft video</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
     </body>
 </html>
