--- a/404.html
+++ b/404.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <big><center><h1>Oops! This site isnt live</h1></center></big>
+        <h2>Check back later, or try a different link.</h2>
+        <h2>If another website redirected you here, then you clicked on a link that wasn't finished yet.</h2>
+        <h2>Thank you for wasting me 1gb website traffic a month. I hope you a good day.</h2>
     </body>
 </html>
