--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Error</title> 
+        <title>Website not found</title> 
     </head>
     <body>
         <big><center><h1>Oops! This site isnt live</h1></center></big>
