--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>cool site</title> 
-    </head>
-    <body>
-        <big><center><h1>Cool site</h1></center></big>
-        <hr>
-    </body>
+<head>
+	<title>GRUBBY</title>
+</head>
+<body>
+	<header>
+		<h1>Welcome to GRUBBY</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Menu</a></li>
+			<li><a href="#">About Us</a></li>
+			<li><a href="#">Contact Us</a></li>
+		</ul>
+	</nav>
+	<main>
+		<section>
+			<h2>Featured Items</h2>
+			<p>Here are some of our featured menu items:</p>
+			<ul>
+				<li>Item 1</li>
+				<li>Item 2</li>
+				<li>Item 3</li>
+			</ul>
+		</section>
+		<section>
+			<h2>About Us</h2>
+			<p>GRUBBY is a restaurant that serves delicious food. We pride ourselves on using fresh ingredients and unique flavor combinations.</p>
+		</section>
+	</main>
+	<footer>
+		<p>&copy; 2023 GRUBBY. All rights reserved.</p>
+	</footer>
+</body>
 </html>
