--- a/404.html
+++ b/404.html
@@ -1,13 +1,9 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Website not found</title> 
+        <title>Error</title> 
     </head>
     <body>
-        <big><center><h1>Oops! This site isnt live</h1></center></big>
-        <hr>
-        <p>Check back later, or try a different link.</p>
-        <p>If another website redirected you here, then you clicked on a link that wasn't finished yet.</p>
-        <p>Thank you for wasting me 1gb website traffic a month. I hope you a good day.</p>
+        <big><center><h1>Oops! This site isn't live.</h1></center></big>
     </body>
 </html>
