--- a/GuideDeHtml.html
+++ b/GuideDeHtml.html
@@ -8,7 +8,13 @@ h5 {
 html{
         background-color: #6a6e90;
     }
+    
+h3, h4, h5{
+            display: none;
+          }
+
 </style>
+
 
 
 <html>
