--- a/New folder/JunkyFunky.html
+++ b/New folder/JunkyFunky.html
@@ -85,14 +85,14 @@
   </script>
   <script>
     const buttonPhrases = [
-      "Never gonna give you up",
-      "Never gonna let you down",
-      "Never gonna run around",
-      "And desert you",
-      "Never gonna make you cry",
-      "Never gonna say goodbye",
-      "Never gonna tell a lie",
-      "And hurt you"
+      "You're useless",
+      "You're adopted",
+      "You piece of sh#t",
+      "May you die while you funk",
+      "I should've aborted you since the dawn of time",
+      "YOUR MOM",
+      "you worthless piece of sh#t",
+      "We have rice at home you stupid crap"
     ];
     
     function changeButtonText() {
