--- a/New folder/JunkyFunky.html
+++ b/New folder/JunkyFunky.html
@@ -2,11 +2,11 @@
 <style>
 	h5 {
 	  color: white;
-	  background-color: rgb(22, 11, 57);
+	  background-color: rgb(136, 0, 0);
 	  border-radius: 7px;
 	}
 	html{
-			background-color: #6a6e90;
+			background-color: #ff0000;
 		}
 		
 	h3, h4, h5{
