--- a/New folder/JunkyFunky.html
+++ b/New folder/JunkyFunky.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <style>
 	h5 {
-	  color: white;
-	  background-color: rgb(136, 0, 0);
+	  color: rgb(255, 255, 255);
+	  background-color: rgb(0, 0, 0);
 	  border-radius: 7px;
 	}
 	html{
-			background-color: #ff0000;
+			background-color: #806868;
 		}
 		
 	h3, h4, h5{
@@ -30,6 +30,8 @@
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Shop</a></li>
 			<li><a href="about.html">about us</li>
+				<button onclick="window.location.href='https://www.youtube.com/watch?v=D3eezV-W-N4&t=105s';">Go to Example.com</button>
+
 			
 
 		
@@ -108,3 +110,4 @@
       }
     }
     </script>
+	<img src="" alt="">
