--- a/New folder/JunkyFunky.html
+++ b/New folder/JunkyFunky.html
@@ -30,12 +30,12 @@
 			<li><a href="#">Home</a></li>
 			<li><a href="#">Shop</a></li>
 			<li><a href="about.html">about us</li>
-				<button onclick="window.location.href='https://www.youtube.com/watch?v=D3eezV-W-N4&t=105s';">Go to Example.com</button>
+			
 
 			
 
 		
-			<li><a href="contact.html">Contact Us</a></li>
+	        <li><a href="contact.html">Contact Us</a></li>
 
 		</ul>
 	</nav>
@@ -87,14 +87,31 @@
   </script>
   <script>
     const buttonPhrases = [
-      "You're useless",
-      "You're adopted",
-      "You piece of sh#t",
-      "May you die while you funk",
-      "I should've aborted you since the dawn of time",
-      "YOUR MOM",
-      "you worthless piece of sh#t",
-      "We have rice at home you stupid crap"
+"My father's quite a character, messy as can be",
+"A nut-lover with shells strewn all around the TV,",
+"He'll watch the football game with passion and with glee,",
+"And tease us all, making us laugh until we can't breathe.",
+
+"In his cluttered kingdom, he reigns supreme",
+"With crumbs and wrappers, he's built his own dream",
+"His love for nuts is no secret, it's plain to see",
+"Pistachios, almonds, cashews, all a part of his spree",
+
+"But when his team is playing, he's a different man",
+"Yelling at the screen, waving his hands",
+"He'll make predictions, and boast and brag",
+"And sometimes, he'll even win a bet or two, swag!",
+
+"So here's to my father, the king of the messy nut-eaters",
+"Who loves his football, and teasing his daughters and sons",
+"May he never change, and continue to be a character",
+"A man of his own, having fun and enjoying the run."
+ 
+
+
+
+
+
     ];
     
     function changeButtonText() {
