--- a/New folder/JunkyFunky.html
+++ b/New folder/JunkyFunky.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <style>
 	h5 {
-	  color: rgb(255, 255, 255);
-	  background-color: rgb(0, 0, 0);
+	  color: rgb(0, 0, 0);
+	  background-color: rgb(151, 91, 0);
 	  border-radius: 7px;
 	}
 	html{
-			background-color: #806868;
+			background-color: #8f6200;
 		}
 		
 	h3, h4, h5{
