--- a/New folder/JunkyFunky.html
+++ b/New folder/JunkyFunky.html
@@ -87,25 +87,27 @@
   </script>
   <script>
     const buttonPhrases = [
-"My father's quite a character, messy as can be",
-"A nut-lover with shells strewn all around the TV,",
-"He'll watch the football game with passion and with glee,",
-"And tease us all, making us laugh until we can't breathe.",
 
-"In his cluttered kingdom, he reigns supreme",
-"With crumbs and wrappers, he's built his own dream",
-"His love for nuts is no secret, it's plain to see",
-"Pistachios, almonds, cashews, all a part of his spree",
+"How dare you click me?",
+"Oh, Hi there",
 
-"But when his team is playing, he's a different man",
-"Yelling at the screen, waving his hands",
-"He'll make predictions, and boast and brag",
-"And sometimes, he'll even win a bet or two, swag!",
+"I'm sorry, but you're disturbing me",
+"please get out",
+"oh?",
+"You're still here?",
 
-"So here's to my father, the king of the messy nut-eaters",
-"Who loves his football, and teasing his daughters and sons",
-"May he never change, and continue to be a character",
-"A man of his own, having fun and enjoying the run."
+"That's fine",
+"GET OUT OF MY PROPERTY",
+"YOU HAVE NO RIGHTS!",
+"I SAID GET OUT!!!",
+"(After a while, the unknown stranger talks)",
+"Look, I'm sorry, I'm just in a bad mood...",
+"My sandwich cheated on me, and I have no cheese for rizz anymore!",
+"It's just so lonely without sandwhich",
+"Oh?",
+"YOu want to know who I am?",
+"I am-",
+"NON OF YOURE BUSSINESESE AND GET THE HELL OURT OF MY HOUSE YOU IGNORRANT PIECE OF COOKIE CRUMB< GET OUT< GET OUT< GETOUT!@#$%^&*JKFSDHAFUDGDJSGNDAHFDABFONADOGIHDGNUDGIDSHGFOIDSGFOISHGDOSHDOGDSOGHDOEGHODIUSGNKODSG"changeButtonText
  
 
 
